Bug #6227
truss(1M) doesn't show TCP_KEEPIDLE, TCP_KEEPCNT, and TCP_KEEPINTVL
100%
Description
https://github.com/illumos/illumos-gate/commit/3d0a255c417cf2e7b69e770de43f195b0eeffacb
The three options were introduced in the above commit, and they were not added to usr/src/cmd/truss/print.c.
before the patch trussing curl shows something like this
so_socket(PF_INET, SOCK_STREAM, IPPROTO_TCP, 0x00000000, SOV_DEFAULT) = 4
setsockopt(4, SOL_SOCKET, SO_KEEPALIVE, 0x08047300, 4, SOV_DEFAULT) = 0
setsockopt(4, tcp, 0x22, 0x08047300, 4, SOV_DEFAULT) = 0
setsockopt(4, tcp, 0x24, 0x08047300, 4, SOV_DEFAULT) = 0
setsockopt(4, tcp, TCP_KEEPALIVE, 0x08047300, 4, SOV_DEFAULT) Err#99 ENOPROTOOPT
After the patch is shows
so_socket(PF_INET, SOCK_STREAM, IPPROTO_TCP, 0x00000000, SOV_DEFAULT) = 4
setsockopt(4, SOL_SOCKET, SO_KEEPALIVE, 0x080472F0, 4, SOV_DEFAULT) = 0
setsockopt(4, tcp, TCP_KEEPIDLE, 0x080472F0, 4, SOV_DEFAULT) = 0
setsockopt(4, tcp, TCP_KEEPINTVL, 0x080472F0, 4, SOV_DEFAULT) = 0
setsockopt(4, tcp, TCP_KEEPALIVE, 0x080472F0, 4, SOV_DEFAULT) Err#99 ENOPROTOOPT
Files
Updated by Robert Mustacchi over 5 years ago
- Subject changed from truss(1M) is not showing TCP_KEEPIDLE, TCP_KEEPCNT, and TCP_KEEPINTVL TCP options. Hex values are shown instead. to truss(1M) doesn't show TCP_KEEPIDLE, TCP_KEEPCNT, and TCP_KEEPINTVL
Updated by Electric Monk over 5 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 020c6b3e8852eb03df56f9b3fc96ffdc28975b1f
commit 020c6b3e8852eb03df56f9b3fc96ffdc28975b1f Author: Mohamed A. Khalfella <khalfella@gmail.com> Date: 2015-09-14T16:43:22.000Z 6227 truss(1M) doesn't show TCP_KEEPIDLE, TCP_KEEPCNT, and TCP_KEEPINTVL Reviewed by: Dan McDonald <danmcd@omniti.com> Reviewed by: Richard PALO <richard@netbsd.org> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Robert Mustacchi <rm@joyent.com>