6227 truss(1M) doesn't show TCP_KEEPIDLE, TCP_KEEPCNT, and TCP_KEEPINTVL Reviewed by: Dan McDonald <danmcd@omniti.com> Reviewed by: Richard PALO <richard@netbsd.org> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Robert Mustacchi <rm@joyent.com>